# pytest-actions

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
pytest_actions/: plugin.py
tests/: plugin_test.py
